--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <textarea class="textarea" id="swiftStruct" rows="10" cols="50" placeholder="Enter Swift Code..."></textarea>
         <button class="center-button" onclick="convertToJSON()">Convert to CodingKey</button>
-        <textarea class="textarea" id="resultStruct" rows="10" cols="50" placeholder="Resulting JSON..." readonly></textarea>
+        <textarea class="textarea" id="resultStruct" rows="10" cols="50" placeholder="Resulting CodingKey..." readonly></textarea>
     </div>
 
     <script type="text/javascript">
